--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -44,7 +44,8 @@ jobs:
         pytest
 
     - name: Lint YAML files
+      # Мы используем готовый Action из магазина GitHub
       uses: ibiqlik/action-yamllint@v3
       with:
-        file_or_dir: .github/workflows/*.yml products_service/*.yaml
-        strict: true
+        # Указываем, какие файлы проверять (все .yml и .yaml)
+        file_extensions: 'yml,yaml'
