--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Настройки для вашего локального компьютера
-DB_SERVER=stud-srv
+DB_SERVER=stud-sr
 DB_DATABASE=MicroshopShustov
 
 # Оставляем пустыми, так как вы входите через Windows (без пароля)
