--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   integration-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     # Запускаем сервисный контейнер SQL Server
     services:
@@ -21,14 +21,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install ODBC Driver (Linux)
-      run: |
-        curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
-        curl https://packages.microsoft.com/config/ubuntu/$(lsb_release -rs)/prod.list | sudo tee /etc/apt/sources.list.d/msprod.list
-        sudo apt-get update
-        sudo ACCEPT_EULA=Y apt-get install -y msodbcsql17 unixodbc-dev
+        run: |
+          curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
+          # Автоматическое определение версии Ubuntu через $(lsb_release -rs):          
+          curl https://packages.microsoft.com/config/ubuntu/$(lsb_release -rs)/prod.list | sudo tee /etc/apt/sources.list.d/msprod.list
+          sudo apt-get update
+          sudo ACCEPT_EULA=Y apt-get install -y msodbcsql17 unixodbc-dev
 
       - name: Set up Python
-        uses: actions/setup-python@v4 123
+        uses: actions/setup-python@v4
         with:
           python-version: "3.9"
 
