--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Run Tests
         env:
-          PYTHONPATH ${{ github.workspace }}
+          PYTHONPATH: ${{ github.workspace }}
           DB_SERVER: 127.0.0.1
           DB_DATABASE: MicroshopOrders
           DB_USER: sa
