--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -32,7 +32,7 @@ jobs:
           sudo apt-get install -y curl ca-certificates gnupg apt-transport-https
 
           # Microsoft repo key
-          curl -fsSL https://packages.microsoft.com/keys/microsoft.asc | sudo gpg --dearmor -o /usr/share/keyrings/microsoft-prod.gpg
+          curl -fsSL https://packages.microsoft.com/keys/microsoft.asc | sudo gpg --dearmor --batch --yes --no-tty -o /usr/share/keyrings/microsoft-prod.gpg
 
           # Repo (для Ubuntu runner; 22.04 максимально стабильно)
           echo "deb [arch=amd64 signed-by=/usr/share/keyrings/microsoft-prod.gpg] https://packages.microsoft.com/ubuntu/22.04/prod jammy main" | sudo tee /etc/apt/sources.list.d/microsoft-prod.list
